--- a/Tic-Tac-toe/tic-tac-toe.css
+++ b/Tic-Tac-toe/tic-tac-toe.css
@@ -49,7 +49,7 @@
   align-items: center;
 }
 
-.cross{
+.marker{
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
@@ -67,12 +67,12 @@
 
 }
 
-.circle{
+/*.circle{
   width:80%;
   height: 80%;
   border-radius: 50%;
   border: 4px solid blue;
-}
+}*/
 
 footer{
   text-align: center;
