--- a/simon-game/simon-game.css
+++ b/simon-game/simon-game.css
@@ -105,6 +105,12 @@ body{
   padding-top: 0.3em;
 }
 
+.control-btn:hover{
+  background: hsla(47, 26%, 42%, 0.98);
+}
+.score:hover{
+  background: black;
+}
 .one{
   background: var(--colorRed);
   -webkit-transform: rotate(-90deg);
