--- a/simon-game/simon-game.css
+++ b/simon-game/simon-game.css
@@ -89,12 +89,9 @@ body{
   /*border: 1px solid #000;*/
   width: 25%;
   height: 2em;
-  background: hsla(43, 43%, 37%, 0.97);
   border-radius: 15px;
   margin: 0.2em 0em;
   text-align: center;
-  -webkit-box-shadow: -2px 2px 2px 0px black;
-  box-shadow: -2px 2px 2px 0px black;
   color: #fff;
 }
 
@@ -104,9 +101,79 @@ body{
   font-family: "Orbitron";
   padding-top: 0.3em;
 }
+.switch{
+  border-radius: 34px;
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 35px;
 
-.control-btn:hover{
-  background: hsla(47, 26%, 42%, 0.98);
+}
+.switch input{display:none;}
+
+.slider{
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+  box-shadow: inset 0 0.15em 0 rgba(0,0,0,0.3);
+}
+.slider:before{
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  bottom: 4px;
+  left: 4px;
+  background-color: white;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  transition: all 0.4s;
+
+}
+
+input:checked + .slider{
+  background-color: #2196F3;
+}
+input:focus + .slider{
+  -webkit-box-shadow:inset 0 0 1px #2196F3;
+  box-shadow: inset 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before{
+-webkit-transform: translateX(26px);
+-ms-transform: translateX(26px);
+transform: translateX(26px);
+
+}
+.slider.round::before{
+    box-shadow: inset 0 -0.1em 0 rgba(0,0,0,0.6);
+}
+
+.slider.round{
+  border-radius: 34px;
+}
+.slider.round:before{
+border-radius: 50%;
+}
+
+.strict{
+  width: 2em;
+  height:2em;
+  border-radius: 20%;
+  -webkit-box-shadow: inset 0 -0.2em  rgba(153, 153, 148, 0.9);
+  background-color: #e45738;
+  box-shadow: inset 0 -0.2em  rgba(153, 153, 148, 0.9);
+}
+.score{
+  -webkit-box-shadow: -1px 2px 1px 0 grey;
+  box-shadow: -1px 2px 1px 0 grey;
 }
 .score:hover{
   background: black;
