--- a/simon-game/simon-game.css
+++ b/simon-game/simon-game.css
@@ -171,6 +171,16 @@ border-radius: 25%;
   background-color: #e45738;
   box-shadow: inset 0 -0.2em  rgba(153, 153, 148, 0.9);
 }
+.light{
+  height: 1em;
+  width: 1em;
+  background-color: #000;
+  position: absolute;
+  left: 130px;
+  border-radius: 50%;
+  -webkit-box-shadow: inset 0px -0.2em 0 grey;
+  box-shadow: inset 0px -0.16em 0 grey;
+}
 .score{
   -webkit-box-shadow: -1px 2px 1px 0 grey;
   box-shadow: -1px 2px 1px 0 grey;
