--- a/Tic-Tac-toe/tic-tac-toe.css
+++ b/Tic-Tac-toe/tic-tac-toe.css
@@ -1,3 +1,8 @@
+body {
+    font-family: 'Baloo',cursive;
+    background: #A8EBFF;
+}
+
 .outer-container{
     display: -webkit-flex;
     display: -ms-flex;
@@ -7,10 +12,21 @@
     flex-direction: column;
     justify-content: center;
     align-content: center;
-    border: solid black 1px;
+    box-shadow: -3px 2px 0px 0px #838181;
+    /* border: solid black 1px; */
     margin: 3em;
 }
 
+.title {
+    font-weight: bold;
+    font-size: 3em;
+    text-shadow: white -2px 2px 0px,
+    white -2px 3px 0px,
+    white -2px 4px 0px;
+    text-align: center;
+    color: #48C4F3;
+
+}
 .game-container{
     width: 100%;
     height: 100%;
@@ -25,23 +41,52 @@
     display: none; /* Hidden by default */
     position: fixed;
     z-index: 1;
-    left:0;
-    top: 0;
-    width: 100%
+    left:32%;
+    top: 32%;
+    width: 25em;
     height: 100%
     overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgb(0, 0, 0,0.4); /* black with opacity */
+    /* background-color: rgb(102, 204, 255); */
+    /* background-color: rgb(102, 204, 255,0.4); */
+    /* background-color: rgb(0, 0, 0,0.4); [> black with opacity <] */
 }
 
 /* Modal Content Box */
 .modal-content {
-    background-color: #fefefe;
+    background-color: #A2E4FF;
+    box-shadow: -2px 0px 0px 0px black;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+    display: flex;
+    align-items:center;
+    flex-direction:column;
+    /* text-align: center; */
+}
+.pick-type {
+    text-align:center;
+    height: 2em;
+    width: 2em;
+    margin-top:0.3em;
+    background-color: #859EF5;
+    box-shadow: -1px -1px 0px 0px #5F5F5F;
+    padding: 50% auto; 
 
+}
+
+.buttons {
+    text-align: center;
+    display: flex;
+    flex-direction:row;
+    justify-content:center;
+}
+.buttons > button {
+    width:5em;
+    height:4em;    
+}
+.modalButton {
+    transition: opacity 0.3s;
 }
 /* The Close Button */
 .close {
@@ -58,16 +103,6 @@
     cursor: pointer;
 }
 
-.pick-type{
-    height: 4em;
-    width: 4em;
-    background-color: yellow;
-    border: solid black 1px;
-}
-
-
-
-
 .game-row{
     display: -webkit-flex;
     display: -ms-flex;
@@ -75,13 +110,11 @@
     -webkit-flex-direction: row;
     -ms-flex-direction: row;
     flex-direction: row;
-    border: solid green 1px;
-    /*width: 100%;*/
-    /*height: 6em;*/
     flex-basis: 33%;
 }
 
 .game-square{
+    font-size:3em;
     display: -webkit-flex;
     display: -ms-flex;
     display: flex;
@@ -90,7 +123,9 @@
     flex-direction: column;
     flex-basis: 33%;
     border: solid 1px black;
-    height: 10em;
+    background: #D1FFDC;
+    min-height: 6em;
+    min-width: 6em;
     justify-content: center;
     -ms-align-items: center;
     align-items: center;
@@ -114,12 +149,6 @@
 
 }
 
-/*.circle{
-width:80%;
-height: 80%;
-border-radius: 50%;
-border: 4px solid blue;
-}*/
 
     footer{
         text-align: center;
